--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: 300;
+}
+
+.header {
+  padding: 50px 15px;
+  background-color: #f1f1f1;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  max-width: 800px;
+  padding: 50px 15px;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.accordion {
+  margin-bottom: 15px;
+  border: 1px solid #000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.accordion.opened .accordion__head span {
+  transform-origin: center center;
 }
 
-.App-link {
-  color: #61dafb;
+.accordion.disable-click .accordion__head::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  content: '';
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.accordion__head {
+  background-color: #fff;
+  position: relative;
+  cursor: pointer;
+}
+
+.accordion__head p {
+  padding: 21px 50px 21px 22px;
+  color: #000;
+  margin-bottom: 0;
+  z-index: 1;
+  position: relative;
+}
+
+.accordion__head span {
+  position: absolute;
+  top: 50%;
+  right: 17px;
+  margin-top: -12px;
+  cursor: pointer;
+  font-size: 1.5rem;
+  transform: rotate(0deg);
+  transition-property: transform;
+  transition-timing-function: ease;
+}
+
+.accordion__head span svg {
+  display: block;
+}
+
+.accordion__body {
+  background-color: #000;
+  display: none;
+  overflow: hidden;
+  transition-property: height;
+  transition-timing-function: ease;
+}
+
+.accordion__body_inner {
+  padding: 33px 22px;
+  color: #fff;
 }
